--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BooksStore">
         <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.BooksStore.NoActionBar"></activity>
+        <activity
             android:name=".Ui.BooksHome"
             android:theme="@style/Theme.BooksStore.NoActionBar">
             <intent-filter>
@@ -19,7 +23,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".Ui.BooksDetails" />
-
     </application>
 
 </manifest>
